--- a/pgr03AdocaoResponsavel/pom.xml
+++ b/pgr03AdocaoResponsavel/pom.xml
@@ -29,6 +29,8 @@
 	<properties>
 		<java.version>21</java.version>
                 <maven.test.skip>true</maven.test.skip>
+                <start-class>br.com.ifba.pgr03AdocaoResponsavel.Pgr03AdocaoResponsavelApplication</start-class>
+                
 	</properties>
 	<dependencies>
 		<dependency>
