--- a/pgr03AdocaoResponsavel/src/main/resources/application.properties
+++ b/pgr03AdocaoResponsavel/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/pgr03adocaoresponsavel
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configura\u00e7\u00e3o do JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
