Correção no nome do projeto e no application.properties

--- a/pgr03AdocaoResponsavel/pom.xml
+++ b/pgr03AdocaoResponsavel/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>br.com.ifba</groupId>
 	<artifactId>pgr03AdocaoResponsavel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>pgr03AdocaoResponsavel</name>
+	<name>prg03adocaoresponsavel</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
